# daily-summary

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  pyproject.toml
.claude/: handoff.md
deploy/: DEPLOY.md  crontab.snippet  daily-summary-web.service  daily-summary.service  daily-summary.timer  mac-fallback.plist  run-daily.sh
digest/digest_core/: __init__.py  apply.py  billing.py  bootstrap.py  cli.py  contacts.py  daily.py  delivery.py  evaluation.py  evidence.py  feedback.py  knowledge.py  packet.py  reasoner.py  relevance.py  render.py  schema.py  state.py  todos.py
digest/digest_web/: __init__.py  actions.py  app.py  rerun.py  service.py
digest/digest_web/templates/: base.html  clients.html  contacts.html  knowledge.html  project.html  projects.html  today.html  todos.html
digest/tests/: test_apply.py  test_billing.py  test_cli_window.py  test_closure_decay.py  test_contacts.py  test_corrections.py  test_daily_golden.py  test_dashboard.py  test_delivery.py  test_email_feedback.py  test_evaluation.py  test_evidence.py  test_feedback.py  test_feedback_consume.py  test_feedback_parse.py  test_knowledge.py  test_orchestration.py  test_packet.py  test_reasoner.py  test_reasoner_backends.py  test_relevance.py  test_render.py  test_render_sections.py  test_review2_fixes.py  test_scaffold.py  test_schema.py  test_state.py  test_todos.py  test_tombstones.py
digest/tests/fixtures/: expected_digest.md  expected_todos.json  model_output_daily.json
digest/tests/fixtures/emails/INBOX/: 01-sprig-homepage.eml  02-newlead-brochure.eml  03-sub-logo.eml
digest/tests/fixtures/state/: clients.json  contacts.json  projects.json
docs/: 00-overview.md  01-state-model.md  02-pipeline.md  03-todo-model.md  04-delivery.md  05-model-seam.md  06-build-plan.md  07-acceptance.md  08-dashboard.md  RUNBOOK.md  STATUS.md
docs/reviews/: README.md  REVIEW-2026-06-05.md  REVIEW-2026-06-05b.md  REVIEW-3-pending.md  REVIEW-3.md  REVIEW-4-pending.md  REVIEW-4.md  REVIEW-5-pending.md  REVIEW-5.md
eval/: README.md
fixtures/: README.md
scripts/: june_reset.py
