[project]
name = "daily-summary"
version = "0.1.0"
description = "Read-only daily business digest for a freelance design studio: conditions the day's mail and reasons out project status, important updates, and a prioritized TODO list."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "mail-evidence",
    "markdown>=3.5",  # render the digest to HTML for email (Mac Mail shows raw markdown otherwise)
]

[project.optional-dependencies]
# Cloud reasoning backends for REASONER=api (provider-agnostic). anthropic = Anthropic SDK;
# openai = any OpenAI-compatible endpoint (OpenRouter / Together / local vLLM). Not needed for the
# default REASONER=code (Claude Code subscription) or the file-backend MVP.
api = ["anthropic>=0.40", "openai>=1.40"]
# The Avigail dashboard (docs/08). FastAPI + Jinja2 + HTMX (HTMX is a CDN script, no Python dep).
# Installed on the mini-pc alongside the pipeline; not needed for the email-only path.
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]

[project.scripts]
digest = "digest_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["digest/digest_core", "digest/digest_web"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

# mail-evidence is consumed as an editable path dependency from the sibling repo.
# Designing toward extracting it to a standalone shared lib; when that happens, only
# this source entry changes. NEVER add a daily-summary import into mail-evidence.
[tool.uv.sources]
mail-evidence = { path = "../invoicing-assistant/skills/mail-evidence", editable = true }

[tool.pytest.ini_options]
testpaths = ["digest/tests"]
pythonpath = ["digest"]

[tool.ruff]
target-version = "py311"
